fixed margin for right-aligned images

--- a/source/stylesheets/components/_text.scss
+++ b/source/stylesheets/components/_text.scss
@@ -133,7 +133,7 @@
     &.right {
       box-sizing: border-box;
       float: right;
-      margin: 0 0 0 20px;
+      margin: 0 0 20px 20px;
       width: 15vw;
     }
 
